# obiwac.github.io

./: .gitignore  Cargo.toml  README.md  gen_static.sh  index.html  rustfmt.toml
.github/workflows/: rust.yml
.well-known/matrix/: server
24hvelo/: index.html
batman/: index.html
bfm/: index.html
fprint/: index.html
gdpr/: index.html
graphic-design/: index.html
karwa/: index.html
mcpy/: index.html
moodle/: index.html
prestatic/: CNAME
public/: main.css
public/blog/: 2-os-1-pool.md  fprint.md  s0i3-linux-config  s0ix.md
public/moodle/: paturage.js
public/upload/: index.js
s0ix/: index.html
src/: base.rs  blog.rs  common.rs  index.rs  main.rs  person.rs  project_pages.rs  projects.rs  social.rs
static/: index.html  main.css
static/24hvelo/: index.html
static/batman/: index.html
static/bfm/: index.html
static/fprint/: index.html
static/gdpr/: index.html
static/graphic-design/: index.html
static/karwa/: index.html
static/mcpy/: index.html
static/moodle/: index.html  paturage.js
static/public/: main.css
static/public/batman/: presentation.html
static/public/blog/: fprint.md  s0ix.md
static/public/moodle/: paturage.js
static/public/schema/: me.json
static/public/upload/: index.js
static/s0ix/: index.html
static/upload/: index.html
static/x-compositing-wm/: index.html
upload/: index.html
x-compositing-wm/: index.html
