[package]
name = "obiwac-website"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "obiwac-website"
path = "src/main.rs"

[dependencies]
rocket = "0.5.0-rc.3"
maud = { git = "https://github.com/mbr/maud.git", branch = "mbr/rocket-0.5.0-rc.1", features = ["rocket"] }
css-minify = "0.3.1"
pulldown-cmark = "0.12.1"
ammonia = "4.0.0"
